--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,8 @@
         "psr-4" : {
             "App\\" : "App/"
         }
+    },
+    "require" : {
+        "twbs/bootstrap" : "4.0.0"
     }
 }
